ver0.1.0
- Added support for linux (ubuntu)
- Fixed bug when compiling with gcc

ver0.0.4
- Added UTF-8 support for Windows
- Added format check for gui_definition.json
- Added a function to add quotes to path
- Changed command format

ver0.0.3
- Added checkboxes to GUI components
- Added width setting to choice
- Improved error handling

ver0.0.2
- Added checkbox and text to GUI components
- Added support for multiple commands
- Added support for help URLs
- Added function to save status

ver0.0.1
- Initial release